force-app/main/default/objects/Product2/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula>IMAGE( 
  BLANKVALUE(ImageURL__c, &quot;https://cdn.icon-icons.com/icons2/2699/PNG/512/salesforce_logo_icon_170764.png&quot;),
  &quot;Product Image&quot;,
  IF(ImageWidth__c  == 0, 40, ImageWidth__c),
  IF(ImageHeight__c == 0, 40, ImageHeight__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>