force-app/main/default/objects/Product2/fields/ImageHeight__c.field-meta.xml
<CustomField>
    <fullName>ImageHeight__c</fullName>
    <label>Image Height</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>