force-app/main/default/objects/Product2/fields/ImageURL__c.field-meta.xml
<CustomField>
    <fullName>ImageURL__c</fullName>
    <label>Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>