force-app/main/default/objects/Product2/fields/ImageWidth__c.field-meta.xml
<CustomField>
    <fullName>ImageWidth__c</fullName>
    <label>Image Width</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>