force-app/main/default/objects/Product2/listViews/RevenueCloud.listView-meta.xml
<ListView>
    <fullName>RevenueCloud</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>SBQQ__ChargeType__c</columns>
    <columns>SBQQ__BillingFrequency__c</columns>
    <columns>SBQQ__BillingType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>